src/test/deca/syntax/valid/methode_class_01.deca
// Description:
//    Programme testant la déclaration d'une méthode .
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023

class A {
    int x(int y, boolean z, float o) {
    }
}